Update subtitle text; fix spacing issues

--- a/animation.css
+++ b/animation.css
@@ -60,7 +60,7 @@
       left: 1200px;
     }
     100% {
-      left: calc(50% - 107px);
+      left: calc(50% - 97px);
     }
   }
   
@@ -75,7 +75,7 @@
     }
     100% {
       opacity: 1;
-      right: calc(50% - 147px);
+      right: calc(50% - 138px);
     }
   }
 }
